# nativepg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
doc/: rationales.md
docs/: TYPES_MAPPING.md
docs/images/: nativepg.md
example/: CMakeLists.txt  asio_dml.cpp  base.cpp  co_connection.cpp  co_connection_pool.cpp  co_dml.cpp  co_multiplexed_connection.cpp  copy_out.cpp  datetime.cpp  dynamic_resultset.cpp  execute_max_rows.cpp  field_meta.cpp  geometry.cpp  geometry_hotspots.cpp  json.cpp  listen.cpp  nativepg.cpp  prepared_statements.cpp  resultsets.cpp  update_affected_rows.cpp
example/types/: base.cpp  datetime.cpp  decimal.cpp  json.cpp  load_types.cpp  nullable.cpp  numeric.cpp
include/nativepg/: client_errc.hpp  co_connection.hpp  co_connection_pool.hpp  co_multiplexed_connection.hpp  command_info.hpp  connect_params.hpp  connection.hpp  context.hpp  dynamic_resultset.hpp  extended_error.hpp  field_traits.hpp  field_view.hpp  notification_event.hpp  notify_event.hpp  parameter_ref.hpp  request.hpp  response.hpp  response_handler.hpp  row_traits.hpp  sqlstate.hpp  sqlstate_cond.hpp  types.hpp
include/nativepg/detail/: disposition.hpp  field_meta.hpp  field_traits.hpp  field_traits_base.hpp  field_traits_datetime.hpp  field_traits_decimal.hpp  field_traits_geometry.hpp  field_traits_json.hpp  field_traits_nullable.hpp  field_traits_numeric.hpp  row_traits.hpp
include/nativepg/detail/loaders/: registry_loader.hpp
include/nativepg/misc/: params.hpp
include/nativepg/protocol/: any_backend_message.hpp  async.hpp  bind.hpp  cancel_request.hpp  close.hpp  command_complete.hpp  command_complete_tag.hpp  common.hpp  connection_state.hpp  copy.hpp  data_row.hpp  describe.hpp  empty_query_response.hpp  execute.hpp  execution.hpp  flush.hpp  frontend_messages.hpp  header.hpp  messages.hpp  messages_view.hpp  notice_error.hpp  parse.hpp  parse_message.hpp  parse_message_fsm.hpp  query.hpp  read_message_fsm.hpp  read_response_fsm.hpp  ready_for_query.hpp  scram_sha256.hpp  serialization_context.hpp  startup.hpp  startup_fsm.hpp  sync.hpp  terminate.hpp  views.hpp
include/nativepg/protocol/detail/: connect_fsm.hpp  exec_fsm.hpp  exec_some_fsm.hpp  read_buffer.hpp  scram_sha256_fsm.hpp  serialization_context.hpp
include/nativepg/types/: base.hpp  basic_pg_value.hpp  binary_writer.hpp  concepts.hpp  datetime.hpp  decimal.hpp  geometry.hpp  json.hpp  nullable.hpp  numeric.hpp  pg_bool.hpp  pg_float4.hpp  pg_float8.hpp  pg_int2.hpp  pg_int4.hpp  pg_oid_type.hpp  pg_text.hpp  pg_type_traits.hpp  pg_uuid.hpp  readable_traits.hpp  registry.hpp  traits.hpp  types.hpp  writeable_traits.hpp
include/nativepg/types/detail/: concepts.hpp  traits.hpp
include/nativepg/udt/: user_defined_type.hpp
include/nativepg/wire/: backend_messages.hpp  data_row_view.hpp  messages.hpp  parse_context.hpp  serialization_context.hpp  views.hpp
src/: base64.hpp  co_connection.cpp  co_connection_pool.cpp  co_multiplexed_connection.cpp  connect_fsm.cpp  coroutine.hpp  error.cpp  exec_fsm.cpp  fsm.cpp  messages.cpp  parse_context.hpp  read_message_fsm.cpp  read_response_fsm.cpp  request.cpp  response.cpp  scram_sha256_fsm.cpp  serialization_context.hpp  sqlstate.cpp  startup_fsm.cpp  types.hpp
src/nativepg_internal/: base64.cpp  base64.hpp  check_request.hpp  notification_queue.hpp  notify_queue.hpp  openssl_error.cpp  openssl_error.hpp  scram_sha256_crypt.hpp  scram_sha256_messages.hpp  sqlstate_as_string.hpp  sqlstate_to_string.hpp
src/nativepg_internal/connection_pool/: check_pool_params.hpp  connection_node.hpp  connection_pool_impl.hpp  sansio_connection_node.hpp
src/nativepg_internal/multiplexed_connection/: multiplexer.hpp
test/: CMakeLists.txt  main.cpp
test/integration/: test_co_connection.cpp
test/test_utils/: corosio_utils.cpp  corosio_utils.hpp  printing.hpp  response_msg_type.hpp  test_utils.cpp  test_utils.hpp
test/test_utils/include/test_utils/: ci_server.hpp  printing.hpp  response_msg_type.hpp  test_range_eq.hpp  test_utils.hpp
test/test_utils/src/: common_utils.cpp  corosio_utils.cpp
test/unit/: test_diagnostics.cpp  test_disposition.cpp  test_extended_error_boost_system.cpp  test_extended_error_disposition.cpp  test_field_view.cpp  test_request.cpp  test_response.cpp  test_resultset_callback.cpp  test_sqlstate.cpp
test/unit/misc/: test_params.cpp
test/unit/nativepg_internal/: test_base64.cpp
test/unit/protocol/: test_check_request.cpp  test_command_complete_tag.cpp  test_message_missing_bytes.cpp  test_messages_view.cpp  test_next_power_of_2.cpp  test_parse_message.cpp  test_read_buffer.cpp  test_read_message_fsm.cpp  test_read_response_fsm.cpp  test_scram_sha256_client_final_message.cpp  test_scram_sha256_client_first_message.cpp  test_scram_sha256_crypt.cpp  test_scram_sha256_fsm.cpp  test_scram_sha256_server_final_message.cpp  test_scram_sha256_server_first_message.cpp  test_startup_fsm.cpp
test/unit/types/: test_base.cpp  test_binary_writer.cpp  test_datetime.cpp  test_decimal.cpp  test_json.cpp  test_nullable.cpp  test_numeric.cpp  test_pg_types.cpp  test_traits.cpp
tools/: file_headers.py
